# replay

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  com.github.avojak.replay.yml  install-dev-dependencies.sh  log.out  meson.build  run
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml
data/: com.github.avojak.replay.appdata.xml.in.in  com.github.avojak.replay.desktop.in.in  com.github.avojak.replay.gresource.xml  com.github.avojak.replay.gschema.xml.in  meson.build
data/assets/github/: Replay GitHub Repo Card.ai
data/assets/icons/16x16/: README.md
data/core-descriptors/: README.md  mgba.libretro  mgba_libretro.info
data/roms/: GBWORDYL.gb  GBWORDYL_0.75.gb
data/styles/: AlertView.css  ControllerConfigInfoBar.css  LibraryLoadingView.css  SaveStatePreview.css  SettingsHeaderbar.css  WelcomeView.css
po/extra/: POTFILES
scripts/: reset  run
src/: Application.vala  CoreManager.vala  Emulator.vala  EmulatorManager.vala  MainLayout.vala  MainWindow.vala  config.vala.in  event-codes.vapi  meson.build
src/CHIP8/: Interpreter.vala
src/CHIP8/Debug/: Dialog.vala
src/CHIP8/Graphics/: Display.vala  PPU.vala
src/CHIP8/Graphics/Widgets/: Display.vala  HeaderBar.vala
src/CHIP8/IO/: Keypad.vala
src/CHIP8/Memory/: MMU.vala
src/CHIP8/Processor/: CPU.vala  Registers.vala
src/Core/: Client.vala  DatabaseLibretroCoreSource.vala  FileSystemLibrarySource.vala  FileSystemLibretroCoreSource.vala  LibrarySource.vala  LibretroCoreSource.vala
src/Core/Device/: RetroGamepad.vala
src/DMG/: Emulator.vala
src/DMG/Audio/: APU.vala  SoundRegisters.vala
src/DMG/Graphics/: Display.vala  GPU.vala  GraphicsRegisters.vala  LCDC.vala
src/DMG/IO/: Joypad.vala  SerialPort.vala
src/DMG/Memory/: AddressSpace.vala  BootRom.vala  MMU.vala  RAM.vala  ROM.vala  Timer.vala
src/DMG/Memory/Cartridge/: Cartridge.vala
src/DMG/Processor/: ALU.vala  CPU.vala  FlagRegister.vala  Flags.vala  InterruptManager.vala  Jump.vala  Operation.vala  Registers.vala
src/Layouts/: EmulatorLayout.vala  LibraryLayout.vala  LibraryLayout[OLD].vala  MainLayout.vala
src/Models/: Game.vala  InputMode.vala  LibraryItemFilterFunction.vala  LibraryItemSortFunction.vala  LibretroArtType.vala  LibretroCore.vala  LibretroCoreInfo.vala  LibretroGame.vala  LibretroGameDetails.vala  LibretroSystemMapping.vala  ROMExtensionMapping.vala  System.vala  TheGamesDBDetails.vala  VideoFilterMapping.vala
src/Models/Functions/: LibraryItemFilterFunction.vala  LibraryItemSortFunction.vala
src/Services/: CoreManager.vala  CoreRepository.vala  DeviceMapper.vala  DeviceTester.vala  Emulator.vala  EmulatorManager.vala  EmulatorWindowActionManager.vala  GameLibrary.vala  LibraryWindowActionManager.vala  LibretroCoreRepository.vala  LibretroGameArtRepository.vala  LibretroGameRepository.vala  MainWindowActionManager.vala  ROMLibrary.vala  RetroGamepad.vala  RetroInputManager.vala  SQLClient.vala  Settings.vala  TheGamesDBClient.vala  TheGamesDBRepository.vala
src/Services/ActionManager/: EmulatorWindowActionManager.vala
src/Services/Gamepad/: GamepadDPad.vala  GamepadInput.vala  GamepadMapper.vala  GamepadMappingBuilder.vala  GamepadTester.vala  GamepadViewConfiguration.vala
src/Services/Keyboard/: KeyboardMapper.vala  KeyboardMappingBuilder.vala  KeyboardMappingManager.vala  KeyboardTester.vala
src/Utils/: BitUtils.vala  DigestUtils.vala  FileUtils.vala  HttpUtils.vala  TimeUtils.vala
src/Views/: GameDetailView.vala  GamepadView.vala  LibraryAlertView.vala  LibraryLoadingView.vala  LibraryView.vala  LibraryView[OLD].vala  WelcomeView.vala
src/Views/Settings/: AbstractSettingsView.vala  BehaviorSettingsView.vala  ControllerSettingsPage.vala  ControllerSettingsView.vala  CoresSettingsView.vala  DisplaySettingsView.vala  GamepadSettingsPage.vala  GamesSettingsView.vala  InputDeviceSettingsPage.vala  InterfaceSettingsView.vala  KeyboardSettingsPage.vala  SettingsView.vala  SystemSettingsPage.vala  SystemsSettingsView.vala
src/Widgets/: ControllerSettingsRow.vala  EmulatorHeaderBar.vala  GameGrid.vala  GameGridDetailsPanel.vala  HeaderBar.vala  LibraryHeaderBar.vala  LibraryItem.vala  LibrarySidePanel.vala  LibrarySidePanelItem.vala  MainHeaderBar.vala  MediaGrid.vala  MediaItem.vala
src/Widgets/Dialogs/: AboutDialog.vala  DebugDialog.vala  InputDeviceResetWarningDialog.vala  LibraryItemPropertiesDialog.vala  MediaDialog.vala  PreferencesDialog.vala  RestartConfirmationDialog.vala  RestartResumeDialog.vala
src/Windows/: EmulatorWindow.vala  LibraryWindow.vala  MainWindow.vala
test/: ExampleTest.vala  Makefile  TestCase.vala  TestHarness.vala  meson.build
vapi/: libevdev.vapi
